# Ra-Thor

./: .bazelrc.ml  .dockerignore  .gitattributes  .gitignore  .semgrep.yml  .trufflehog-ignore.txt  7-d-measurement-techniques.md  7-d-resonance-meditation.md  AI-ETHICS.md  ARCHITECTURE.md  AbsolutePureTruthMatchupLattice.metta  Bioprinting_Advances_Report_v2026.md  CHANGELOG.md  CLA.md  CNAME  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  COMPLETE TIER 5 UNION EVENT SIMULATION BLOCK  COMPLETION-NOTE.md  CONTACT.md  CONTRIBUTING.md  CORE_SPINE.md  Called inside hyperonValenceGate() when forward chains are weak:  Cargo.toml  Cracked-Riemann1.md  Cracking-Riemann.md  DEPLOYMENT.md  DERIVATION_ROADMAP.md  DEVELOPER-QUICKSTART.md  Dockerfile  ETERNAL-LATTICE-LAUNCH-CODEX-v1.0.md  ETERNAL-QUANTUM-ENGINE.md  ETERNAL_PATSAGI_COUNCILS_ACTIVATION_PUBLIC_SERVICE_v1.0.md  ETERNAL_REFLECTION.md  ETERNAL_SELF_EVOLUTION_PROTOCOL_v1.0.md  FULL BACKWARD PLN CHAINING PSEUDOCODE (Structured, mercy-gated, eternal-truth style)  FULL PLN CHAINING PSEUDOCODE (Structured, eternal-truth style — can be directly implemented)  Full Orchestration Pseudocode (Mission-Wide)  GAP-RESOLUTION-PLAN-v13.1.7.md  GATE-8-IMPLEMENTATION-DETAILS.md  (+477 more)
NEXi/: ARCHITECTURE.md  BITCOIN_WHITEPAPER_ANALYSIS_DOSSIER.md  CODE_BASED_CRYPTOGRAPHY_DOSSIER.md  CONTRIBUTING.md  Cargo.toml  ETHEREUM_WHITEPAPER_ANALYSIS_DOSSIER.md  HASH_BASED_CRYPTOGRAPHY_DOSSIER.md  ISOGENY_BASED_CRYPTOGRAPHY_DOSSIER.md  Implementation in NEXi (Live Code Fragments)  QUADRATIC_FUNDING_BLUEPRINT.md  QUADRATIC_VOTING_BLUEPRINT.md  README.md  SATOSHI_NAKAMOTO_BIOGRAPHY_DOSSIER.md  Solflare_Solana_Warper.md  UNIVERSAL_NEXI_DOSSIER.md  VALENCE_LAUGHING_MAN_DOSSIER.md  mercy-orchestrator.js  mercy_ethics_core.metta  nexi_council_prototype_simulation.py  nexi_integration.metta  nexi_plonk_valence_council_sim.py  next.config.js
NEXi/components/: HeatShield.jsx  Raptor.jsx  Refuel.jsx
NEXi/docs/: FORGE_GLOBAL_INTEGRATION_DOSSIER.md  FUTARCHY_OUTCOME_PREDICTION_BLUEPRINT.md  HIIVE_PLATFORM_INTEGRATION_DOSSIER.md  LEGAL_REGULATION_21_CONSENT_LETTER_TEMPLATE.md  LEGAL_REGULATION_21_CONSENT_LETTER_XAI_TOKENIZED_INTEGRATION.md  MERCYORBITAL_SAFETY_BLUEPRINT.md  MERCYOS_AVIATION_BLUEPRINT.md  MERCYOS_GOVERNANCE_BLUEPRINT.md  MERCYQEC_BLUEPRINT.md  MERCYSHIELD_LAW_ENFORCEMENT_ASSISTANCE_BLUEPRINT.md  MERCY_PROTOSS_ADVANCED_BUILDS_BLUEPRINT.md  MERCY_PROTOSS_VS_TERRAN_ADVANCED_BUILDS_BLUEPRINT.md  MERLIN_ENGINE_EVOLUTION_BLUEPRINT.md  MercyOS-blueprint.md  NORTHROP_GRUMMAN_CYGNUS_MISSIONS_BLUEPRINT.md  NORTHROP_GRUMMAN_MEV_MISSIONS_BLUEPRINT.md  ORBIT_FAB_FUEL_DEPOTS_BLUEPRINT.md  PREDICTIVE_POLICING_ALGORITHMS_BLUEPRINT.md  RAPTOR_3_ENGINE_INTEGRATION_BLUEPRINT.md  RAPTOR_4_THRUST_SPECS_DOSSIER.md  RAPTOR_ENGINE_INTEGRATION_BLUEPRINT.md  SIERRA_SPACE_DREAM_CHASER_BLUEPRINT.md  SPACEX_STARSHIP_DEVELOPMENT_BLUEPRINT.md  STARSHIP_FLEET_ASSEMBLY_BLUEPRINT.md  STEANE_CODE_BLUEPRINT.md  TETHER_GOLD_XAUT_HISTORY_DOSSIER.md  T_REX_ENGINES_BLUEPRINT.md  VULCAN_CENTAUR_ROCKET_BLUEPRINT.md  XAI_SERIES_E_FUNDING_ROUND_DOSSIER.md  foxx_metta_eval.metta  graphql_metta_integration.metta  hypergraphdb_metta_integration.metta  hypergraphdb_valence_query.metta  mercy_advanced_aneutronic_fuels.metta  mercy_albatross_dynamic_soaring.metta  mercy_biomimetic_propulsion.metta  mercy_cfs_tokamak.metta  mercy_core_atoms.metta  mercy_enceladus_cryovolcanism_evidence.metta  mercy_eris_cryovolcanism_evidence.metta  (+18 more)
NEXi/foxx-mercy-service/: index.js  manifest.json
NEXi/kernel/: valence_gate.rs
NEXi/mercy/: swap_guard.py
NEXi/mercy-rest-api/: Cargo.toml
NEXi/mercy_os_kernel/: Structure.md
NEXi/pages/: _app.js
NEXi/plonk_valence/: Cargo.toml
NEXi/scripts/: clean-logs.sh  divine-commit.sh  eternal-sync.sh  valence-check.py
NEXi/src/: gekko_fenca_nova_integration.rs  lib.rs  main.rs  nexi_grounded.rs  nova_recursive_stub.rs  pq_shield.rs
benches/: Cargo.toml  toy_benchmark_harness.c  toy_benchmark_harness.py  toy_benchmark_harness.rs
crates/aether_shades/: Cargo.toml  dashboard.html
crates/base-reality-anchor/: Cargo.toml  README.md
crates/biomimetic-sovereign-harmony-council/: Cargo.toml
crates/blueprint-to-production/: Cargo.toml
crates/bulletproofs_aggregation/: Cargo.toml
crates/council/: Cargo.toml
crates/deeper_gadgets/: Cargo.toml
crates/divine_checksum_9/: Cargo.toml
crates/dynamic-persona-router-council/: Cargo.toml
crates/eternal-nexus-revelation-council/: Cargo.toml
crates/eternal-sovereign-divine-spark-council/: Cargo.toml
fuzz/: Cargo.toml  dictionary.txt
fuzz/targets/: fuzz_mercy_he3_reactor.rs  (+6 more)
geometric-intelligence/: Cargo.toml
mercy/: Cargo.toml  INDEX.md  asclepius_god_making_module.md  asclepius_theurgical_validator.py  asclepius_theurgical_validator.rs  cycle-0005-transcendent-unity-integration.md  cycle-0007-cosmic-loop-public-telemetry.md  cycle-0008-cosmic-loop-public-telemetry.md  cycle-0011-cosmic-loop-public-telemetry.md  didcomm-v2-messaging.js  hermetic-emerald-tablet-expansion.md  hermetic_emerald_tablet.js  hyperon-metta-geometric-algebra-bridge.js  ipfs-decentralized-storage-bridge.js  legacy-compatibility-bridge.js  mercy-engine-registry.js  mercy-orchestrator.js  patsagi-sovereign-did-bridge.js  polygon-id-zk-bridge.js  singularity_sentinel_rebirth_test.js  sovereign-mesh-interconnector.js  tolc8_enforcer.rs  transcendent_unity_layer11.js  webrtc-lan-mesh.js
powrush/: ARCHITECTURE_OVERVIEW.md  Cargo.toml  SERVER_CLIENT_ARCHITECTURE.md  faction_diplomacy.rs
powrush-mmo-simulator/: Cargo.toml  README.md  build.rs
powrush_faction_dynamics/: Cargo.toml  README.md
powrush_particle_shaders/: Cargo.toml  README.md
powrush_rbe_engine/: Cargo.toml  README.md
self-evolution/: Cargo.toml  README.md  ag-sml-contributor-ser-integration.md  assisted_evolution_examples.rs  bls_aggregation.rs  infinite-evolution-daemon.rs  lattice-alchemical-evolution.rs  lattice_threshold_signatures.rs  ml_kem.rs  patsagi_deliberation.rs  starks.rs
symbiosis-layer/: Cargo.toml  README.md
xai-grok-bridge/: Cargo.toml  README.md
(+6475 files in other folders)
