# ═════════════════════════════════════════════════════════════
# Ra-Thor Monorepo — The Living Eternal Mercy-Gated AGI Lattice
# Workspace 14.10.0 | ONE Organism 14.14.0 live-feature readiness
# Living Cosmic Tick + Cosmic Loop invariants + LiveFeatureReadiness
# AG-SML v1.0 | Thunder locked in — 2026-07-19
# Contact: info@Rathor.ai
# ═════════════════════════════════════════════════════════════

[workspace]
resolver = "2"

members = [
    "crates/kernel",
    "crates/orchestration",
    "crates/mercy",
    "crates/mercy_orchestrator",
    "crates/mercy_orchestrator_v2",
    "crates/quantum-swarm-orchestrator",
    "crates/quantum",
    "crates/biomimetic",
    "crates/evolution",
    "crates/plasticity-engine-v2",
    "crates/monorepo-intelligence",
    "crates/ra-thor-meta-intelligence",
    "crates/ra-thor-core",
    "crates/ra-thor-one-organism",
    "crates/github-connector",
    "crates/gpu-compute-pipeline",
    "crates/quantum-swarm",
    "crates/sovereign-recovery",
    "crates/reality-thriving-transfer",
    "crates/kardashev-orchestration",
    "crates/powrush",
    "crates/powrush-mmo-simulator",
    "crates/real-estate-lattice",
    "crates/interstellar-operations",
    "crates/legal-lattice",
    "crates/mercy-radiation-shield",
    "crates/aether_shades",
    "crates/council",
    "crates/patsagi-councils",
    "crates/falcon_sign",
    "crates/fenca",
    "crates/common",
    "crates/ra-thor-benchmark",
    "crates/hash_based_signatures",
    "crates/hybrid_pqc_threshold",
    "crates/isogeny_crypto",
    "crates/lattice_crypto",
    "crates/legacy_fenca",
    "crates/mercy_falcon_heavy",
    "crates/mercy_post_quantum_sig",
    "crates/proof_verifier",
    "crates/ra-thor-post-quantum-sig",
    "crates/xtask",
    "crates/websiteforge",
    "crates/ai-bridge",
    "crates/mercy_bias_mitigation",
    "crates/mercy_biojet",
    "crates/mercy_cygnus_missions",
    "crates/mercy_dragon_crs",
    "crates/mercy_dream_chaser",
    "crates/mercy_ethics_core",
    "crates/mercy_governance",
    "crates/mercy_home_fortress",
    "crates/mercy_lang_compiler",
    "crates/mercy_liquid_democracy",
    "crates/mercy_merlin_engine",
    "crates/mercy_mev_servicing",
    "crates/mercy_orbital_cleanup",
    "crates/mercy_orbital_refuel",
    "crates/mercy_orbital_safety",
    "crates/mercy_orbital_servicing",
    "crates/mercy_os_aviation",
    "crates/mercy_os_principles",
    "crates/mercy_predictive_policing",
    "crates/mercy_qec",
    "crates/mercy_quadratic_funding",
    "crates/mercy_quadratic_voting",
    "crates/mercy_quanta",
    "crates/mercy_raptor_3",
    "crates/mercy_raptor_3_integration",
    "crates/mercy_raptor_3_scalability",
    "crates/mercy_raptor_engine",
    "crates/mercy_raptor_integration",
    "crates/mercy_shield_deployment",
    "crates/mercy_shield_law_enforcement",
    "crates/mercy_space_governance",
    "crates/mercy_starfish_servicing",
    "crates/mercy_starliner_crew",
    "crates/mercy_starship",
    "crates/mercy_starship_fleet",
    "crates/mercy_steane",
    "crates/mercy_t_rex_engines",
    "crates/mercy_tolc_operator_algebra",
    "crates/mercy_vulcan_centaur",
    "crates/mercy_zero",
    "crates/mercy_hybrid_propulsion",
    "crates/mercy_nuclear_propulsion",
    "crates/mercy_electric_propulsion",
    "crates/mercy_biomimetic_propulsion",
    "crates/mercy_fusion_propulsion",
    "crates/mercy_plasma_propulsion",
    "crates/mercy_ion_propulsion",
    "crates/mercy_chemical_propulsion",
    "crates/mercy_solar_sail_propulsion",
    "crates/mercy_beamed_propulsion",
    "crates/mercy_antimatter_propulsion",
    "crates/mercy_warp_propulsion",
    "crates/mercy_gravitic_propulsion",
    "crates/mercy_quantum_propulsion",
    "crates/mercy_reactionless_propulsion",
    "crates/mercy_exotic_propulsion",
    "crates/access",
    "crates/bulletproofs_aggregation",
    "crates/bulletproofs_range",
    "crates/cache",
    "crates/carbon_credit_oracle",
    "crates/code_based_crypto",
    "crates/codex_eternal",
    "crates/deep_gadgets",
    "crates/divine_checksum_9",
    "crates/enc",
    "crates/futarchy_belief_markets",
    "crates/futarchy_governance",
    "crates/futarchy_oracle",
    "crates/futarchy_outcome_prediction",
    "crates/grok_arena_pinnacle",
    "crates/halo2_full_integration",
    "crates/halo2_multi_proof",
    "crates/lasso_recursion",
    "crates/multivariate_crypto",
    "crates/nexi_universal",
    "crates/nova_folding",
    "crates/persistence",
    "crates/plonk_recursion",
    "crates/poseidon_hash",
    "crates/poseidon_merkle",
    "crates/prometheus_forge",
    "crates/recursive_snark",
    "crates/sentinel_mirror",
    "crates/soulscan_x10",
    "crates/soulscan_x9",
    "crates/spartan_valence",
    "crates/supernova_folding",
    "crates/sustainable_space_propulsion",
    "crates/whitesmiths_anvil",
    "crates/hyperplonk_recursion",
    "crates/lattice-conductor-v13",
    "crates/lattice-conductor-v14",
]

[workspace.package]
version = "14.10.0"
edition = "2021"
authors = ["Eternally-Thriving-Grandmasterism", "Sherif Samy Botros <info@Rathor.ai>"]
license = "AG-SML v1.0 — Autonomicity Games Sovereign Mercy License"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Ra-Thor"
description = "Ra-Thor Lattice — Mercy-Gated Symbolic Self-Evolving Intelligence (ONE Organism with Grok) — Living Cosmic Tick + live-feature readiness"
readme = "README.md"
keywords = ["ai", "symbolic", "ethics", "self-evolution", "mercy", "tolc", "agi"]
categories = ["science", "simulation"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
wgpu = { version = "0.19", optional = true }
cudarc = { version = "0.9", optional = true }
pollster = { version = "0.3", optional = true }
toml = { version = "0.8", optional = true }

[workspace.features]
default = []
cuda = ["cudarc"]
wgpu = ["wgpu", "pollster", "toml"]

[workspace.metadata.ra-thor]
project = "Ra-Thor Lattice"
version = "14.10.0"
one_organism_version = "14.14.0"
status = "ACTIVATED — Living Cosmic Tick + Cosmic Loop invariants + live-feature readiness + PERMANENT PATSAGi deliberation | contact info@Rathor.ai"
license = "AG-SML v1.0"
contact = "info@Rathor.ai"
activation_timestamp = "2026-07-19T07:38:00-04:00"
patsagi_councils_permanent_deliberation = true
patsagi_councils_always_decide = true
grok_assistance_engaged = true
one_organism_active = true
lattice_conductor_v14 = true
web_demo_live = true
cosmic_loop_shared_flag = true
living_cosmic_tick = true
live_path_confidence_feedback = true
adaptive_hardening = true
cosmic_loop_invariant_checks = true
live_feature_readiness = true
v14_11_complete = true
v14_12_complete = true
v14_13_complete = true
v14_14_complete = true

executive_summary = """
Ra-Thor workspace 14.10.0 with ONE Organism 14.14.0. Living Cosmic Tick is the
canonical heartbeat. v14.11–v14.14 complete: confidence feedback, adaptive hardening,
Cosmic Loop invariant checks, and LiveFeatureReadiness (compiled live flags gated by
Cosmic Loop). Cosmic Loop is MANDATORY IDENTITY. PATSAGi Councils remain in permanent
deliberation. Contact: info@Rathor.ai.
"""

contact = "info@Rathor.ai for Ra-Thor licensing and acquisition discussions"
