# WORKSPACE.bazel – Bazel workspace root with rules_tensorflow for ML

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_python 0.36.0 (Feb 2026 latest stable)
http_archive(
    name = "rules_python",
    sha256 = "a0fbfa8f3b4c6b2c8e9e5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a",
    strip_prefix = "rules_python-0.36.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.36.0/rules_python-0.36.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "rules_python_dependencies", "py_repositories")

rules_python_dependencies()
py_repositories()

# Hermetic Python 3.11 toolchain
load("@rules_python//python:toolchains.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
    is_default = True,
)

# rules_tensorflow (official TF Bazel rules – 2026 latest)
http_archive(
    name = "org_tensorflow",
    sha256 = "e5e4b8a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a",
    strip_prefix = "tensorflow-2.16.1",
    urls = [
        "https://github.com/tensorflow/tensorflow/archive/refs/tags/v2.16.1.tar.gz",
    ],
)

load("@org_tensorflow//tensorflow:workspace3.bzl", "tf_workspace3")

tf_workspace3()

load("@org_tensorflow//tensorflow:workspace2.bzl", "tf_workspace2")

tf_workspace2()

load("@org_tensorflow//tensorflow:workspace1.bzl", "tf_workspace1")

tf_workspace1()

load("@org_tensorflow//tensorflow:workspace0.bzl", "tf_workspace0")

tf_workspace0()

# rules_cc for CUDA / C++ ML extensions
http_archive(
    name = "rules_cc",
    sha256 = "b2b5e5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5a5f5",
    strip_prefix = "rules_cc-0.0.9",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies")

rules_cc_dependencies()
