[package]
name = "powrush-mmo-simulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Powrush RBE MMO Full Simulation Engine — Mercy-Gated ShardManager Integration for Interest Management, Council Proposal Routing & Epigenetic Evolution in Ra-Thor ONE Organism"
repository.workspace = true
keywords = ["powrush", "mmo", "rbe", "simulation", "shardmanager", "mercy", "ra-thor", "geometric-intelligence"]
categories = ["games", "simulation"]

[dependencies]
geometric-intelligence = { path = "../geometric-intelligence" }
ra-thor-mercy = { path = "../mercy" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
full = ["geometric-intelligence/full"]

[lib]
name = "powrush_mmo_simulator"
path = "src/lib.rs"