[package]
name = "powrush"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Powrush — The living RBE MMORPG simulation where humans, AI, and AGI coexist, learn, and earn together in joy and abundance. Core of Ra-Thor Thunder Lattice integration for entity orchestration, Clifford healing fields, PATSAGi council guidance, Hyperon/Metta reasoning, and cross-platform WASM client bindings for browser/VR/AR entity login. Thunder locked in."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
full-clifford = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_text", "bevy_ui", "bevy_winit", "x11"
] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

# === Living Lattice Crates (real calls replace stubs) ===
mercy = { path = "../mercy" }
patsagi-councils = { path = "../patsagi-councils" }
quantum-swarm-orchestrator = { path = "../quantum-swarm-orchestrator" }
geometric-intelligence = { path = "../geometric-intelligence" }
hyperon-metta-pln = { path = "../hyperon-metta-pln" }

# === WASM Client Bindings for Browser/VR/AR ===
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Document", "HtmlElement", "WebGl2RenderingContext", "XrSession", "VrDisplay", "Navigator", "console"
] }
js-sys = { version = "0.3", optional = true }
